--- a/vue/score-model-front/package.json
+++ b/vue/score-model-front/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
+    "sass-embedded": "^1.81.0",
     "unplugin-auto-import": "^0.18.5",
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.10"
