--- a/java/ScoreModel/pom.xml
+++ b/java/ScoreModel/pom.xml
@@ -99,6 +99,15 @@
 			<artifactId>guava</artifactId>
 			<version>32.0.1-jre</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
