--- a/java/ScoreModel/src/main/resources/application.yml
+++ b/java/ScoreModel/src/main/resources/application.yml
@@ -5,7 +5,16 @@ spring:
     username: root
     password: 123456
     url: jdbc:mysql://192.168.3.73:3306/good_stock?useSSL=false&serverTimezone=Asia/Shanghai
-
+  data:
+    redis:
+      port: 6379
+      host: 192.168.3.80
+      database: 0
+      jedis:
+        pool:
+          max-active: 8
+          max-idle: 8
+          min-idle: 2
 mybatis-plus:
   mapper-locations: classpath:/xml/**.xml
 
